# imath-requests

./: .buildinfo  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  MANIFEST.in  README.md  autocode.html  examples.html  faq.html  genindex.html  index.html  install.html  installing.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: BRANCHES.md  CONTRIBUTOR.md  DEVELOPMENT_STRATEGY.md  MAINTAINER.md  RELEASE_STRATEGY.md
.github/workflows/: build.yml  deploy.todo  deploy.yml  pull_request.yml  release.yml  test.yml
_sources/: autocode.rst.txt  examples.rst.txt  faq.rst.txt  installing.rst.txt
docs/: autocode.rst  conf.py  examples.rst  index.rst  install.rst
docs/sphinx/: Makefile  conf.py  make.bat
doctrees/: autocode.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  installing.doctree
examples/: example_create_server.py  example_run_server.py
html/: .buildinfo  autocode.html  examples.html  faq.html  genindex.html  index.html  installing.html  py-modindex.html  search.html  searchindex.js
html/_sources/: faq.rst.txt  index.rst.txt
imath-requests/: __init__.py
imath_requests/: __init__.py
scripts/: create_release_body.sh
src/imath_requests/: __init__.py  _version.py  request.py  requests.py  server.py
tests/: __init__.py  test_request.py  test_requests.py  test_server.py
